--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,12 +89,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-        release {
-            storeFile file('medsight.keystore')
-            storePassword 'medsight'
-            keyAlias 'medsight'
-            keyPassword 'medsight'
-        }
+        // release {
+        //     storeFile file('medsight.keystore')
+        //     storePassword 'medsight'
+        //     keyAlias 'medsight'
+        //     keyPassword 'medsight'
+        // }
     }
     buildTypes {
         debug {
@@ -103,7 +103,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
