--- a/package.json
+++ b/package.json
@@ -14,13 +14,21 @@
     "@kan9229/react-native-translator": "^0.0.1",
     "@react-native-community/blur": "^4.4.0",
     "@react-native-community/voice": "^1.1.9",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "lottie-react-native": "^7.1.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-app-auth": "^7.2.0",
     "react-native-element-dropdown": "^2.12.2",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-permissions": "^4.1.5",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-translator": "^1.1.6",
     "react-native-tts": "^4.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^3.9.1",
     "react-native-webview": "^13.8.2"
   },
@@ -33,6 +41,7 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
