--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/voice": "^1.1.9",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.9",
     "lottie-react-native": "^7.1.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
