--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-app-auth": "^7.2.0",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^4.1.5",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
