--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-translator": "^1.1.6",
     "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^10.2.0",
