--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@kan9229/react-native-translator": "^0.0.1",
     "@react-native-community/blur": "^4.4.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/voice": "^1.1.9",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
