--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/blur": "^4.4.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/voice": "^1.1.9",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.9",
@@ -24,12 +25,13 @@
     "react-native": "0.73.6",
     "react-native-app-auth": "^7.2.0",
     "react-native-element-dropdown": "^2.12.2",
-    "react-native-gesture-handler": "^2.16.2",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^4.1.5",
+    "react-native-reanimated": "^3.16.6",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "^3.35.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-translator": "^1.1.6",
     "react-native-tts": "^4.1.0",
