--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@kan9229/react-native-translator": "^0.0.1",
     "@react-native-community/blur": "^4.4.0",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/voice": "^1.1.9",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^6.1.17",
@@ -27,6 +28,7 @@
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^2.12.2",
     "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.16.6",
     "react-native-responsive-screen": "^1.4.2",
