--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@kan9229/react-native-translator": "^0.0.1",
-    "@react-native-community/blur": "^4.4.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/voice": "^1.1.9",
     "@react-native-masked-view/masked-view": "^0.3.2",
@@ -30,17 +29,12 @@
     "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^2.12.2",
-    "react-native-permissions": "^4.1.5",
-    "react-native-reanimated": "^3.16.6",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.35.0",
     "react-native-simple-toast": "^3.3.2",
     "react-native-translator": "^1.1.6",
-    "react-native-tts": "^4.1.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-vision-camera": "^3.9.1",
-    "react-native-webview": "^13.8.2"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
