--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^2.12.2",
+    "react-native-paper": "^5.13.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.35.0",
