--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "react-native-date-picker": "^5.0.7",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-htmlview": "^0.17.0",
     "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^2.12.2",
     "react-native-paper": "^5.13.1",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.35.0",
     "react-native-simple-toast": "^3.3.2",
     "react-native-translator": "^1.1.6",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
